bitfields/tests/compile_error_cases/bitfield_attribute_non_struct.rs
use bitfields::bitfield;

#[bitfield]
pub enum NonStruct {
    A = 1,
}


fn main() {}
